src/main/java/com/example/error/SongMissingDetailsException.java
package com.example.error;

public class SongMissingDetailsException extends RuntimeException {
}
